src/tests/snapshots/niri__tests__window_opening__check_fullscreen_maximize@fsF-wmA.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nwant maximized: A"
expression: snapshot
---
initial configure:
size: 616 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized]
size: 1280 × 720, bounds: 1248 × 688, states: [Maximized, Activated]

unmaximize configure:
size: 616 × 688, bounds: 1248 × 688, states: [Activated]
